--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "xml",
     "rpc"
   ],
-  "version": "1.3.2",
+  "version": "1.3.2-1",
   "preferGlobal": false,
   "homepage": "https://github.com/Digitro/node-xmlrpc",
   "author": "Brandon Alexander <baalexander@gmail.com> (https://github.com/baalexander)",
